--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@douyinfe/semi-illustrations": "^2.55.5",
     "@douyinfe/semi-ui": "^2.80.0",
     "alova": "^3.2.11",
-    "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
@@ -29,11 +28,12 @@
     "@rsbuild/core": "^1.3.20",
     "@rsbuild/plugin-react": "^1.3.0",
     "@rsbuild/plugin-sass": "^1.3.1",
+    "@tailwindcss/postcss": "^4.1.7",
     "@types/node": "^20.12.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "sass": "^1.74.1",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.1.7",
     "typescript": "^4.9.3"
   }
 }
