--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.6.1",
     "specify-text": "^0.0.8",
     "zustand": "^5.0.4"
