--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
-    "@rsbuild/core": "^1.3.20",
-    "@rsbuild/plugin-react": "^1.3.0",
+    "@rsbuild/core": "v1.3.22",
+    "@rsbuild/plugin-react": "^1.3.1",
     "@rsbuild/plugin-sass": "^1.3.1",
     "@tailwindcss/postcss": "^4.1.7",
     "@types/node": "^20.12.7",
