--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@rsbuild/core": "v1.3.22",
-    "@rsbuild/plugin-react": "^1.3.1",
+    "@rsbuild/core": "v1.4.0-beta.1",
+    "@rsbuild/plugin-react": "^1.3.2",
     "@rsbuild/plugin-sass": "^1.3.1",
-    "@tailwindcss/postcss": "^4.1.7",
+    "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "^20.12.7",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "sass": "^1.74.1",
-    "tailwindcss": "^4.1.7",
-    "typescript": "^4.9.3"
+    "tailwindcss": "^4.1.8",
+    "typescript": "^5.8.3"
   }
 }
